Se agrego FTP, extra info de HTTP y SMTP | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
@@ -24,15 +24,19 @@ Los protocolos, a muy grandes rasgos, se puede decir que tienen 3 componentes fu
 >- **Heterogénea**: distintos servicios y protocolos accedidos desde un único servicio cliente.
 >- **Colaborativa**: cualquier persona puede en principio agregar, extraer o consultar información, disminuyendo las limitaciones de distancia y tiempo.
 
-#### Hiper Text Transfer Protocol (HTTP)
+### Hiper Text Transfer Protocol (HTTP)
 
 Al igual que DNS, el protocolo HTTP se basa en la arquitectura o modelo cliente-servidor, en donde:
 
 - Los navegadores son los agentes de usuario que recuperan los recursos deseados, facilitando la navegación a través de la web e implementan el lado del cliente del protocolo.
-- Los servidores alojan objetos web direccionales por una URL, por ejemplo, Apache-Microsoft Internet Information Server.
+- Los servidores alojan objetos web direccionables por una URL, por ejemplo, Apache-Microsoft Internet Information Server.
 
 El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP como protocolo de transporte. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
-Este protocolo cuenta con múltiples versiones, su versión 2 concretamente, fue diseñada para ser el protocolo de próxima generación para aplicaciones web, introduciendo nuevos mecanismos significativos, para empezar funciona en la capa superior de TCP, es decir, en la ***capa de seguridad de transporte (TLS)***. A su vez lógicamente se divide en tres niveles:
+
+>[!tldr] Conexiones Persistentes y no Persistentes
+>Cuando hablamos del protocolo HTTP, decimos que una ***conexión no es persistente*** si todos los mensajes de solicitud/respuesta para cada objeto se envía a través de distintas conexiones TCP, mientras que decimos que la ***conexión es permanente*** si múltiples mensajes se envían a través de la misma conexión TCP.
+
+Este protocolo cuenta con múltiples versiones, su versión 2 concretamente, fue diseñada para ser el protocolo de próxima generación para aplicaciones web, introduciendo nuevos mecanismos significativos, para empezar funciona en la capa superior de TCP, es decir, en la ***capa de seguridad de transporte (TLS)***. A su vez, lógicamente se divide en tres niveles:
 
 1. **Nivel de Transmisión**: Abarca el control de flujo, streams y tramas.
 2. **HPACK**: Se encarga de la codificación binaria y de implementar los protocolos de compresión.
@@ -41,8 +45,8 @@ Este protocolo cuenta con múltiples versiones, su versión 2 concretamente, fue
 Las novedades de la versión 2 del protocolo son las siguientes:
 
 - Permite la multiplexación, es decir, varios flujos pueden ser transportados simultáneamente a través de una única conexión TCP.
-- Los encabezados HTTP de compresión se comprimen utilizando una combinación de esquemas de compresión.
-- Control de flujo y mecanismos de dependencia que permiten a los clientes y servidores HTTP / 2 señalar cómo transmitir objetos.
+- Los encabezados HTTP se comprimen utilizando una combinación de esquemas de compresión.
+- El control de flujo y los distintos mecanismos de dependencia que permiten a los clientes y servidores HTTP / 2 señalar cómo transmitir objetos.
 - Mecanismo de inserción de recursos que facilita el envío de recursos de los servidores HTTP / 2 a sus clientes.
 
 Los principales bloques de transmisión de HTTP 2 son los siguientes:
@@ -58,26 +62,36 @@ Los principales bloques de transmisión de HTTP 2 son los siguientes:
 >- Compatibilidad con HTTP / 1.1: Para garantizar que el cambio al nuevo protocolo sea lo más fluido posible, los servidores y navegadores que permanezcan compatibles con HTTP / 1.1 podrán comunicarse con servidores y/o navegadores HTTP / 2.
 >- HTTP / 2 tiene el requisito previo de que el sitio web esté ya en HTTPs, pero es importante tener en cuenta que HTTP / 2 requiere una versión mejorada de la seguridad de la capa de transporte (TLS1.2); ofreciendo una mejor seguridad que las versiones anteriores y debería ser utilizado por la mayoría de los servicios.
 
-###### Autenticación y Cookies
+##### Autenticación y Cookies
 
 HTTP implementa servidores sin estado, esto significa que no se guarda información sobre la conexión, lo que simplifica el diseño y da un alto rendimiento. Sin embargo, para un sitio web, a menudo es deseable poder identificar a los usuarios, bien porque el servidor desea restringir el acceso a los usuarios o porque desea servir el contenido en función de la identidad del usuario. Para estos propósitos, se utilizan dos mecanismos.
 
-- **Autorización**: Se solicita nombre de usuario y contraseña para acceder a los objetos. Se indican en las cabeceras HTTP.
-- **Cookies**: Se guarda un archivo que contiene información destinada al seguimiento de usuarios y el reconocimiento de preferencias de los mismos para construir patrones de navegación (RFC 2109).
+- **Autorización**: Se solicita nombre de usuario y contraseña para acceder a los objetos. Se indican en las cabeceras HTTP. Además, se realizan verificaciones tanto del servidor como de los usuarios.
+- **Cookies**: Se guarda un archivo que contiene información destinada al seguimiento de usuarios y el reconocimiento de preferencias de los mismos para construir patrones de navegación (RFC 2965).
 
 >[!info] Caching
->Es una estrategia destinada a mejorar la performance del acceso a un sitio Web. Se almacenan las páginas o componentes de éstas en un hardware cercano al posible usuario. Pueden distinguirse los siguientes casos:
+>Es una estrategia destinada a mejorar la performance del acceso a un sitio Web. Se almacenan las páginas o componentes de estas en un hardware cercano al posible usuario. Pueden distinguirse los siguientes casos:
 >1. Páginas recientemente leídas en la propia PC del usuario.
 >2. Páginas de acceso frecuente almacenadas en diferentes servidores distribuidos geográficamente.
 >3. Componentes de contenido gráfico, archivos multimedia, etc., almacenados en servidores de alta performance.
+>
+>Estos cachés comúnmente son conocidos como ***proxys***, estos son entidades de red que se encargan de satisfacer solicitudes HTTP para un dominio web de origen, es decir, su servidor autoritativo. Estas cachés almacenan en su disco copias de objetos solicitados recientemente por los distintos usuarios de una red. Este proxy actúa como servidor y cliente al mismo tiempo, ya que responde peticiones HTTP en caso de contar con el recurso, en caso de no tenerlo en su almacenamiento realiza una petición de este recurso al servidor principal. Estos cachés se implementan principalmente para aumentar el tiempo de respuesta de las peticiones y para reducir la congestión de una red.
+>Aunque la caché resulta muy útil, esto conlleva un problema, el objeto que está almacenado en la caché puede no estar actualizada, por suerte HTTP proporciona un mecanismo que te permite verificar si un objeto ha sido actualizado o no, esto se logra agregando una línea al encabezado de la petición
 
-#### Simple Mail Transfer Protocol (SMTP)
+### Simple Mail Transfer Protocol (SMTP)
 
-En este protocolo los sistemas actúa tanto como cliente como servidor. Además de transferir mensajes entre dos usuarios debe proporcionar medios para resolver problemas ante fallas de la red o máquinas, ya que en caso de que no se pueda mandar el mensaje, el servidor emisor va a conservar el mensaje y lo intentará enviar de nuevo.
+En este protocolo los sistemas actúa tanto como cliente como servidor. Además de transferir mensajes entre dos usuarios, debe proporcionar medios para resolver problemas ante fallas de la red o máquinas, ya que en caso de que no se pueda mandar el mensaje, el servidor emisor va a conservar el mensaje y lo intentará enviar de nuevo.
+La infraestructura de los correos electrónicos está compuesta, además de por este protocolo, de dos partes fundamentales:
 
-###### Multipurpose Internet Mail Extension (MIME)
+1. Los ***agentes de usuario*** que le permiten a los distintos usuarios leer sus correos electrónicos.
+2. Los ***servidores de correo***, son una pieza central de la infraestructura de correos, en estos servidores se tendrá un buzón de entrada para cada usuario.
 
-Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño, otros códigos además de ASCII. Además, en su especificación se definen nuevos campos en la cabecera del mensaje, formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato.
+Por lo general cuando se envía un correo, este se dirige primero al servidor de correos del emisor y de allí al servidor de correos del destinatario, el servidor del emisor no puede enviar dicho mensaje al servidor del receptor, el mensaje se coloca en una cola de mensajes e intenta enviarlo más tarde. En este contexto, SMTP es el protocolo principal utilizado para enviar correos a través de la red, este protocolo se ejecuta en todos los servidores de correos actuando como cliente y servidor al mismo tiempo.
+SMTP tiene algunos defectos como el hecho de que todos los encabezados deben estar codificados utilizando ASCII, lo que lo vuelve inseguro, debido a que cualquiera que intercepte la conexión puede leer el encabezado del mensaje, además de ser tedioso a la hora de enviar archivos multimedia, ya que todo debe ser codificado al ASCII. Otro gran problema es que SMTP no utiliza servidores de correos intermedios para realizar los envíos, esto quiere decir que si dos servidores se encuentran geográficamente en dos regiones distintas, la conexión TCP será directa a pesar de lo inconveniente que esto resulta.
+
+##### Multipurpose Internet Mail Extension (MIME)
+
+Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño, otros códigos, además de ASCII. Además, en su especificación se definen nuevos campos en la cabecera del mensaje, formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato.
 La codificación de los mensajes se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
 
 ##### Protocolos de Acceso al Correo
@@ -89,5 +103,11 @@ Existen protocolos especiales de acceso al correo para transferencia de mensajes
 	2. El agente de usuario envía nombre de usuario y contraseña para realizar una autenticación (Fase de Autenticación).
 	3. Se descargan los correo de forma local (Fase de Transacción).
 	4. El cliente termina la operación y el servidor se actualiza (Fase de Actualización).
-- **IMAP (Internet Mail Access Protocol)**: Posee más funcionalidades que ***POP3***, pero es mucho más complejo, la principal diferencia es que IMAP permite que el agente de usuario acceda al almacenamiento de correos como si fuera local, desde distintas localizaciones sin necesidad de tener que mover los mensajes de un equipo a otro. Además de permitir al agente de usuario obtener partes específicas del mensaje, tales como encabezado o una parte del correo *MIME multipart*.
+- **IMAP (Internet Mail Access Protocol)**: Posee más funcionalidades que ***POP3***, pero es mucho más complejo, la principal diferencia es que IMAP permite que el agente de usuario acceda al almacenamiento de correos como si fuera local, desde distintas localizaciones, sin necesidad de tener que mover los mensajes de un equipo a otro. Además de permitir al agente de usuario obtener partes específicas del mensaje, tales como encabezado o una parte del correo *MIME multipart*.
 - **HTTP**
+
+### File Transfer Protocol (FTP)
+
+Es un protocolo que le permite a un host transferir o descargar archivos desde un servidor, este protocolo requiere el primer lugar realizar una autenticación del usuario, a través de un nombre y su respectiva contraseña, una vez se realice esta autenticación el usuario ya puede comenzar a transferir archivos desde el servidor y viceversa, tanto la conexión como la transferencia de los documentos se dan a través de TCP.
+Este protocolo tiene una particularidad, ya que utiliza dos conexiones TCP simultáneas para transferir archivos, una se utiliza para realizar el control de los datos (a través del puerto 21), es decir, chequeo y control de errores y la segunda para la transferencia de datos como tal, como esta información de control no se envía por la misma conexión TCP se dice que esta información se envía ***fuera de banda***.
+Al contrario que HTTP, FTP cuenta con servidores que mantienen el estado del usuario, esto hace que la cantidad de conexiones simultáneas que pueda manejar el servidor sean limitadas.
