--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -25,16 +25,19 @@ La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de ent
 >Por lo que la tabla $I$ no sería necesaria, es decir, se obvia el realizar una tabla para relación.
 
 - Para las relaciones varios a varios, va a existir una tabla para cada conjunto de entidades pertenecientes a la relación y una tabla con el nombre de la relación, cuyos componentes serán las claves primarias de las entidades participantes de dicha relación.
-- Para las relaciones de varios a uno con pertenencia total, solo se crearán dos tablas, de la cual una de ellas contendrá todos los atributos de la relación, lo mismo sucede para las relaciones ***uno a uno*** con participación total en uno de sus lados. 
+- Para las relaciones de varios a uno y de uno a varios con pertenencia total, se crearán dos tablas, de la cual una de ellas contendrá todos los atributos de la relación, agregando para cada entidad débil un atributo extra que representaría la clave primaria de la entidad fuerte con la que se está relacionando. 
 
 ![[varios-uno.png]]
 
-- Para las relaciones uno a uno con participación total de ambos lados, solo se va a crear una única tabla cuyas componentes serán los atributos de una entidad y la clave pública de otra entidad participante de la relación.
+- Para las relaciones uno a uno con participación total de ambos lados y en las relaciones uno a unos normales, se crearán dos tablas que contendrán todos sus atributos correspondientes y una de esas tablas tendrá un atributo más que será la clave primaria de la otra entidad con la que se esté relacionando. Cabe aclarar que la decisión de qué entidad contendrá la clave foránea va a depender del dominio del problema y de la regla de normalización que apliquemos
 
 ![[uno-uno-total.png]]
 
 - Los atributos compuestos se representan de manera plana, separando un atributo por cada componente del atributo, es decir, cada componente del atributo se representa como una columna de la tabla.
-- Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno de los atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria $E$.
+- Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno de los atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria $E$, esto quiere decir que esta tabla no poseerá ninguna clave primaria.
+- Para las relaciones recursivas, es decir, aquellas entidades que tengan una relación consigo misma, se las va a representar de formas diferentes de acuerdo a la aridad que posea dicha relación.
+	- Si la relación es de uno a varios, se puede agregar un atributo más a la entidad que haga referencia, mediante su clave primaria, a otra fila de la tabla, por ejemplo, un empleado puede ser jefe de otros empleados, en este caso podemos agregar un atributo **jefe** a la tabla de empleados, la cual contendrá el identificador de otro empleado de la misma tabla.
+	- Si la relación es de varios a varios, se crea una tabla intermedia que contenga los atributos de la relación (en caso de que dicha relación tenga atributos) y el par de identificadores del empleado y del jefe.
 
 #### Representación de la Generalización y Especialización
 
@@ -48,3 +51,13 @@ Para representar en forma de tablas tanto la generalización como la especializa
 	- **Desventajas**: Los atributos se almacenan de forma redundante para cada una de las subclases.
 
 En aspectos generales, el primer método es más apropiado para casos de generalización solapada, para evitar redundancias. Por Ej.: el caso de personas con sus entidades de nivel inferior, clientes, empleados y gerente. Mientras que el segundo método es más apropiado para casos de generalización disjunta, sobre todo, si es total. Por Ej.: el caso de las cuentas bancarias, que pueden ser caja de ahorro, cuenta corriente, entre otras.
+
+#### Representación de la Agregación
+
+Recordemos que la agregación nos permite tratar a una relación como si fuera una entidad, permitiendo tener relaciones con otras entidades, la forma de pasar a tablas, la agregación varía de acuerdo a la aridad de la relación.
+
+- Si la relación es de uno a varios o viceversa, el pasaje se hará de manera similar a la de una relación uno a varios entre dos entidades, con la diferencia que en este caso se deberá agregar un atributo más a la tabla que representa a la relación.
+- Si la relación es de varios a varios, se deberá crear una nueva tabla que contenga los identificadores de la relación y de la entidad con la que se está relacionando.
+
+>[!caution] Identificadores en las Relaciones
+>Para el caso de que una relación de agregación sea de varios a varios, suele recomendarse crear una clave única para la tabla correspondiente a la relación, debido a que por lo general las claves primarias de una relación están compuestas por un par de claves primarias de las entidades que se están relacionando, lo cual es mucho más complejo de manejar y torna las consultas a las bases de datos más engorrosas.
