--- a/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
@@ -67,7 +67,7 @@ En donde $E$ es cualquier tipo de expresión del álgebra relacional y cada $F^n
 $$
 G_1, G_2, \dots, G_n \ g \ F_1(A_1), F_2(A_2), \dots F_i(A_i) \Large (E)
 $$
-En donde E es cualquier tipo de expresión del álgebra relacional, $G_1, G_2, \dots, G_n$ constituyen una lista de atributos que indican como se realizará la agrupación, $F_i$ es una función de agregación y $A_i$ es un nombre de atributo.
+En donde $E$ es cualquier tipo de expresión del álgebra relacional, $G_1, G_2, \dots, G_n$ constituyen una lista de atributos que indican como se realizará la agrupación, $F_i$ es una función de agregación y $A_i$ es un nombre de atributo.
 
 - **Reuniones Externas**. Es una ampliación de la operación reunión para trabajar con la información que falta, existen 3 tipos de reuniones externas, la reunión externa por izquierda, por derecha y la completa. Las tres formas de la reunión externa calculan la reunión y añaden tuplas adicionales al resultado de la misma, con la desventaja de que añade valores nulos, lo que puede generar problemas a la hora de realizar cálculos.
 - **Borrar**. En el álgebra relacional, los borrados se expresan de la siguiente manera, $r \leftarrow r- E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
